[package]
name = "rsc"
version = "0.1.0"
authors = ["Kevin <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
cfg-if = "0.1"
clap = "2"
dirs = "2"
failure = "0.1"
human-panic = "1"
lazy_static = "1"
log =  "0.4"
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
users = "0.9"
yaml = { package = "yaml-rust", version = "0.4" }